# visera

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  vercel.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  run-migrations.yml  test-backend.yml
app/: README.md  layout.tsx  page.tsx
app/(auth)/login/: page.tsx
app/(auth)/resend-verification/: page.tsx
app/(auth)/send-verification-email/: page.tsx
app/(auth)/signup/: page.tsx
app/(auth)/verify-email/: page.tsx
app/(auth)/verify-otp/: page.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/common/: Sidebar.tsx
app/(dashboard)/dashboard/: page.tsx
app/(dashboard)/home/: page.tsx
app/(dashboard)/settings/: page.tsx
app/lib/api/: auth.ts  client.ts  users.ts
app/lib/auth/: context.tsx  hooks.ts  storage.ts
app/lib/types/: auth.ts
backend/: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  run_migrations.sh  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 07d7e8739bbf_add_is_email_verified_to_users.py  3634d43f5c5a_create_otp_codes_table.py  52d84137644b_add_deleted_at_to_users.py  796debcfa78c_create_users_table.py
backend/api/: deps.py
backend/api/v1/: auth.py  users.py
backend/core/: config.py  database.py  email.py  security.py
backend/models/: __init__.py  otp_code.py  user.py
backend/schemas/: __init__.py  auth.py  user.py
backend/services/: auth_service.py  user_service.py
backend/tests/: conftest.py
backend/tests/fixtures/: factories.py
backend/tests/integration/: test_auth.py  test_deps.py  test_main.py  test_users.py
backend/tests/unit/core/: __init__.py  test_config.py  test_email.py  test_security.py
backend/tests/unit/models/: test_user.py
backend/tests/unit/services/: __init__.py  test_auth_service.py  test_user_service.py
scripts/: test-backend.sh  vercel-build.sh
