[project]
name = "visera-backend"
version = "1.0.0"
description = "FastAPI backend for Visera"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "alembic==1.14.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.0",
    "email-validator==2.2.0",
    "pyjwt==2.9.0",
    "python-jose[cryptography]==3.3.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "pyproject.toml" }

[tool.pdm.scripts]
dev = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

